<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/cancel_activity"
        android:title="@android:string/cancel" />
    <item
        android:id="@+id/okay_activity"
        android:title="@android:string/ok" />
</menu>